GNOME Bugzilla – Bug 719970
Fails to build: gdkevents-quartz.c:1692:58: error: expected ';' at end of declaration
Last modified: 2013-12-08 06:05:08 UTC
The file gdk/quartz/gdkevents-quartz.c is no more valid. A '}' is missing. The compiler error is: [...] Making install in quartz CC GdkQuartzView.lo CC GdkQuartzNSWindow.lo CC gdkcursor-quartz.lo CC gdkdevice-core-quartz.lo CC gdkdevicemanager-core-quartz.lo CC gdkdisplay-quartz.lo CC gdkdisplaymanager-quartz.lo CC gdkdnd-quartz.lo CC gdkevents-quartz.lo CC gdkeventloop-quartz.lo CC gdkglobals-quartz.lo CC gdkkeys-quartz.lo CC gdkproperty-quartz.lo CC gdkscreen-quartz.lo CC gdkselection-quartz.lo CC gdktestutils-quartz.lo gdkevents-quartz.c:1692:58: error: expected ';' at end of declaration GdkEvent *dst) ^ ; gdkevents-quartz.c:1715:2: error: expected '}' } ^ gdkevents-quartz.c:1614:1: note: to match this '{' { ^ 2 errors generated. make[3]: *** [gdkevents-quartz.lo] Error 1 make[3]: *** Waiting for unfinished jobs.... make[2]: *** [install-recursive] Error 1 make[1]: *** [install] Error 2 make: *** [install-recursive] Error 1 Proposed patch: --- /var/folders/x0/49d2r2j93qscjp625r74zjwc0000gn/T//VpHLCk_gdkevents-quartz.c 2013-12-06 14:36:07.000000000 +0100 +++ gdk/quartz/gdkevents-quartz.c 2013-12-06 14:32:39.000000000 +0100 @@ -1680,6 +1680,7 @@ _gdk_quartz_screen_get_setting (GdkScree g_value_set_boolean (value, TRUE); GDK_QUARTZ_RELEASE_POOL; + } /* FIXME: Add more settings */