Add a missing brace

https://bugzilla.gnome.org/show_bug.cgi?id=719970